--- a/styles/homepage/_index.scss
+++ b/styles/homepage/_index.scss
@@ -1,8 +1,9 @@
 @import './home-payment';
 @import './home-social';
 @import './home-newsletter';
+@import './content-banner';
 
-.content {
+.content-main {
   display: flex;
   flex-direction: column;
   gap: 24px;
